20-april-2010 - adelikat - New lua functions movie.ispoweron() and movie.isfromsavestate()
20-april-2010 - adelikat - Win32 - Drag & Drop - if dropping a .fcm with no ROM loaded, prompt for one (same functionality that was added to .fm2 files)
08-april-2010 - ugetab - Win32 - Added conditional debugging option 'K', for bank PC is on
07-april-2010 - adelikat - fix bug that caused zapper.read() to crash when movie playback ends

---r1767 - FCEUX 2.1.3 Released---
---April 7 2010---

07-april-2010 - sgrunt - Lua - gui.text now has out of bounds checking
07-april-2010 - adelikat - Win32 - Lua console - filename updates when lua scripts are dragged to emulator or recent filenames invoked
07-april-2010 - adelikat - Lua no longer unpauses the emulator when a script is loaded
30-march-2010 - ugetab - Win32 - Closing minimized windows no longer moves them the next time they get opened
28-march-2010 - adelikat - lua - fixed zapper.read() to read movie data if a movie is playing.  Also changed the struct values to x,y,fire.  This breaks lua scripts that used it previous, sorry.  
04-march-2010 - prockguy - added menu buttons for loading nsf files
03-march-2010 - adelikat - Win32 - If .fm2 drag & dropped with no ROM load, the open ROM dialog will appear
03-march-2010 - prockguy - fceux - now prints the name of the mapper on rom load
03-march-2010 - prockguy - SDL - VS unisystem keys now configable
03-march-2010 - prcokguy - SDL - changed default hotkeys and keys to match w32
03-march-2010 - prockguy - SDL - fixed dpad/joyhat support
01-march-2010 - adelikat - Movie file format header now has a FDS flag
01-march-2010 - adelikat - win32 - cheats dialog - toggling a cheat in the cheats list now updates the active cheats count
01-march-2010 - adelikat - win32 - a disable movie messages menu item
25-feb-2010 - prockguy - unix netplay is now functional; gtk network gui created
24-feb-2010 - prockguy - GTK - added basic movie controls